# pycount_co

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_co/: __init__.py  datasets.py  plotting.py  pycounts_co.py
tests/: test_pycounts_co.py
