[tool.poetry]
name = "pycounts_co"
version = "0.2.2"
description = "Calculate word counts in a text file!"
authors = ["Cyber Owl"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <4"
matplotlib = "^3.10.0"
numpy = "<2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
python-semantic-release = "^9.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"